[package]
name = "cargo_code_tejas"
description = "basic functions in order to learn rust language"
repository = "https://github.com/tejas3108/hello_cargo"
license = "MIT"
version = "0.1.0"
authors = ["Tejas Deshpande <deshpandetejas95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"